@@ -230,7 +230,7 @@ libinkpost_a_SOURCES =	\
 	gc-alloc.h	\
 	gc-anchored.h gc-anchored.cpp	\
 	gc-core.h	\
-	gc-finalized.h	\
+	gc-finalized.h gc-finalized.cpp	\
 	gc-managed.h	\
 	gc-soft-ptr.h	\
 	gc.cpp	\
