@@ -1,5 +1,11 @@
 2006-04-29  MenTaLguY  <mental@rydia.net>
 
+	* src/Makefile_insert, src/gc-finalized.cpp, src/gc-finalized.h:
+
+	  add finalizer logging
+
+2006-04-29  MenTaLguY  <mental@rydia.net>
+
 	* src/debug/simple-event.h: simplify the SimpleEvent API more
 
 2006-04-29  MenTaLguY  <mental@rydia.net>
